--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,7 @@
             <button mat-menu-item [matMenuTriggerFor]="menuT">TOOLS</button>
             <mat-menu #menuT="matMenu">
                 <button mat-menu-item routerLink="/mp4-converter">GIF TO MP4</button>
-                <button mat-menu-item routerLink="/movie">MUSIC VIDEO CREATOR</button>
+                <!-- <button mat-menu-item routerLink="/movie">MUSIC VIDEO CREATOR</button> -->
             </mat-menu>
             <!-- <button mat-menu-item routerLink="/contact">CONTACT</button> -->
             <!-- <button mat-menu-item routerLink="/book">BOOK DEMO</button> -->
