--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,9 +31,9 @@
         <a routerLink="/support">SUPPORT</a>
         <a routerLink="/how-it-works">HOW IT WORKS</a>
         -->
-        <button mat-button [matMenuTriggerFor]="menu">LEARN &amp; SUPPORT</button>
+        <button mat-button [matMenuTriggerFor]="menu">HELP</button>
         <mat-menu #menu="matMenu">
-            <button mat-menu-item routerLink="/how-it-works">LEARN</button>
+            <button mat-menu-item routerLink="/how-it-works">HELP</button>
             <button mat-menu-item routerLink="/resources">RESOURCES</button>
             <button mat-menu-item routerLink="/support">COMMUNITY</button>
             <button mat-menu-item [matMenuTriggerFor]="menuT">TOOLS</button>
