--- a/src/app/fan-screen/fan-screen.component.html
+++ b/src/app/fan-screen/fan-screen.component.html
@@ -7,8 +7,8 @@
 
         <div *ngIf="takingPic" class="timer">{{timer}}</div>
 
-        <button mat-button color="primary" class="grant-perms" *ngIf="!cameraPerm" (click)="setCamera('environment')">
-            Allow Camera
+        <button class="grant-perms" *ngIf="!cameraPerm" (click)="setCamera('environment')">
+            Start
         </button>
 
         <button mat-mini-fab color="primary" class="take-pic" *ngIf="!takingPic && cameraPerm"
@@ -16,11 +16,15 @@
             <mat-icon>camera</mat-icon>
         </button>
 
-        <video width="100" height="100" loop="loop" autoplay muted="muted"
-            style="position: absolute; top: 0px; left: 0px;">
+        <video width="100" height="100" id="vid" loop autoplay muted controls
+            style="position: absolute; top: 0px; left: 0px; z-index: 4;">
             <source src="https://muvievideos.s3.us-east-2.amazonaws.com/SampleVideo_1280x720_2mb.mp4_1.mp4"
                 type="video/mp4">
         </video>
+
+        <script>
+            document.getElementById('vid').play();
+        </script>
 
     </div>
 </div>
