--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -10,10 +10,9 @@
         <img class="mac" src="../../assets/images/macos.png" />
     </div>
 
-    <div class="bordered">
-        <a href="https://visualz-1.s3.us-east-2.amazonaws.com/VISUALZ-installer.rar" target="_blank" mat-raised-button
-            (click)="downloadWindows()" class="pink button">
-            Download For Windows
+    <div class="bordered" disabled>
+        <a disabled="disabled" mat-raised-button class="pink button">
+            Currently Unavailable
         </a>
 
         <img class="windows" src="../../assets/images/windows.png" />
