--- a/src/app/stream-start/stream-start.component.scss
+++ b/src/app/stream-start/stream-start.component.scss
@@ -1,11 +1,27 @@
 $breakpoint-mobile: 768px;
 
+.white {
+    background: #fff;
+}
 
+input {
+    color: #fff;
+}
 
 a.button {
     color: #ffffff !important;
 }
+
 .bordered {
+
+    &.one {
+        text-align: right;
+    }
+
+    &.two {
+        text-align: left;
+    }
+
     //border: 1px #999 dashed;
     border-radius: 3px;
     padding: 20px 20px 0px 20px;
@@ -13,13 +29,15 @@ a.button {
     display: block;
     width: calc(50% - 85px);
     
-    text-align:center;
+    //text-align:center;
     float: left;
 
     @media (max-width: $breakpoint-mobile) {
         width: calc(250px);
         float: none;
         margin: 20px auto;
+        text-align:center;
+
     }
 
     color: #fff;
@@ -28,27 +46,4 @@ a.button {
         color: #999;
     }
 
-}
-
-.center {
-    text-align: center;
-}
-
-mat-grid-tile {
-    div {
-        text-align: center;
-        color: #fff; 
-
-        a {
-            display: block;
-            width: 300px;
-            color: #fff;
-            text-decoration: none;
-            margin: 0px auto 40px auto;
-
-            &:hover {
-                text-decoration: underline;
-            }
-        }
-    }
 }
