--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,15 @@ body {
     overflow-x: hidden;
 }
 
+.msg {
+    display: block;
+    text-align: center;
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    letter-spacing: 2px;
+}
+
 h1 {
     margin-bottom: 40px;
 }
@@ -105,7 +114,7 @@ p {
         float: left;
 
         h1 {
-            font-size: 100px;
+            font-size: 80px;
             margin: 40px 0 0 0px;
 
             @media (max-width: $breakpoint-mobile) {
