live stream audio works

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -67,11 +67,11 @@
 <router-outlet></router-outlet>
 
 <footer *ngIf="!interactive">
-    <a routerLink="/about">About</a> &nbsp;&nbsp;|&nbsp;&nbsp;
-    <a routerLink="/events">Events</a> &nbsp;&nbsp;|&nbsp;&nbsp;
+    <!-- <a routerLink="/about">About</a> &nbsp;&nbsp;|&nbsp;&nbsp; -->
+    <!-- <a routerLink="/events">Events</a> &nbsp;&nbsp;|&nbsp;&nbsp; -->
+    <a routerLink="/how-it-works">Start Here</a> &nbsp;&nbsp;|&nbsp;&nbsp;
     <a routerLink="/support">Support</a> &nbsp;&nbsp;|&nbsp;&nbsp;
-    <a routerLink="/how-it-works">How It Works</a> &nbsp;&nbsp;|&nbsp;&nbsp;
-    <a routerLink="/investors">Investors</a> &nbsp;&nbsp;|&nbsp;&nbsp;
+    <!-- <a routerLink="/investors">Investors</a> &nbsp;&nbsp;|&nbsp;&nbsp; -->
     <a href="https://www.instagram.com/visualzapp/" target="_blank">Instagram</a> &nbsp;&nbsp;|&nbsp;&nbsp;
     <a routerLink="/terms-conditions">Terms &amp; Conditions</a> &nbsp;&nbsp;|&nbsp;&nbsp;
     <a routerLink="/privacy-policy">Privacy Policy</a>
