--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -80,16 +80,15 @@
         <img src="../../assets/images/projection.jpg" />
         <div class="feature-text">
             <mat-icon aria-hidden="false" aria-label="FanCam" class="ico wide">cast_connected</mat-icon>
-            <h1>Projection</h1>
-            <h2>Visuals that change to the beat of your music</h2>
+            <h1>Graphics</h1>
+            <h2>Visualizations to the beat of your music</h2>
             <div class="big-only">
                 <p>
-                    Visualz is a tool for creating projections that automatically sync and change with the music in
+                    Visualz is a tool for creating visual compositions that automatically sync and change with music in
                     realtime.
                 </p>
                 <p>
-                    Immediately create an awesome experience at your show, event, or party with a visual composition
-                    that bumps.
+                    Immediately make your event a better experience.
                 </p>
             </div>
         </div>
@@ -220,7 +219,7 @@
     <app-htw style="margin:120px auto; display: block;"></app-htw>
 </div>
 
-<!-- XCHANGE -->
+<!-- XCHANGE 
 <header class="skew big-only">
     <h2>THE XCHANGE</h2>
 </header>
@@ -241,9 +240,9 @@
     </div>
 </div>
 <header class="skew white"></header>
+-->
 
-
-<!-- DISQUS -->
+<!-- DISQUS
 <header class="skew big-only">
     <h2>What Do You Want In v1.3.0 (the next version)</h2>
 </header>
@@ -252,7 +251,7 @@
 
         <div id="disqus_thread" style="margin:200px auto;"></div>
     </div>
-</div>
+</div>-->
 
 <header class="skew">
     <h2>Artist Collaborators</h2>
@@ -265,7 +264,8 @@
                 <mat-card-title>Sam White</mat-card-title>
                 <mat-card-subtitle>DJ [Chicago]</mat-card-subtitle>
             </mat-card-header>
-            <img mat-card-image src="https://i1.sndcdn.com/avatars-000334629285-bpkurv-t200x200.jpg" alt="Sam White">
+            <img mat-card-image src="https://visualz-1.s3.us-east-2.amazonaws.com/default-images/samwhite.jpg"
+                alt="Sam White">
             <mat-card-actions>
                 <a href="https://samwhitemusic.com/" target="_blank" mat-button>More Info</a>
             </mat-card-actions>
@@ -298,7 +298,8 @@
                 <mat-card-title>Mark Wolff</mat-card-title>
                 <mat-card-subtitle>DJ [Chicago]</mat-card-subtitle>
             </mat-card-header>
-            <img mat-card-image src="https://i1.sndcdn.com/avatars-000612464100-qf9pzz-t200x200.jpg" alt="Mark Wolff">
+            <img mat-card-image src="https://visualz-1.s3.us-east-2.amazonaws.com/default-images/markwolff.jpg"
+                alt="Mark Wolff">
             <mat-card-actions>
                 <a href="https://soundcloud.com/markwolffmusic/" target="_blank" mat-button>More Info</a>
             </mat-card-actions>
@@ -309,8 +310,7 @@
                 <mat-card-title>Johnny Nonstop</mat-card-title>
                 <mat-card-subtitle>DJ [Chicago]</mat-card-subtitle>
             </mat-card-header>
-            <img mat-card-image
-                src="https://scontent.find1-1.fna.fbcdn.net/v/t1.0-0/p552x414/12718189_1006056269481326_4952101631155024436_n.jpg?_nc_cat=105&_nc_oc=AQl9EpiaNWpK0z9T5IXTKKzmUzuXQ7IrXhmCPlZK0OCbEpcgkdfLZKDHOSRvGhQ0YqU&_nc_ht=scontent.find1-1.fna&oh=a9301ea82bdaff1d5e37a85eb6399cc0&oe=5DFF1144"
+            <img mat-card-image src="https://visualz-1.s3.us-east-2.amazonaws.com/default-images/johnnynonstop.jpg"
                 alt="Johnny Nonstop">
             <mat-card-actions>
                 <a href="https://www.facebook.com/johnnynonstop/" target="_blank" mat-button>More Info</a>
@@ -333,8 +333,7 @@
                 <mat-card-title>Nick Quicktastic</mat-card-title>
                 <mat-card-subtitle>DJ [Chicago]</mat-card-subtitle>
             </mat-card-header>
-            <img mat-card-image
-                src="https://scontent-ort2-2.cdninstagram.com/vp/88d8f288f9df1e87ded6d5a47ada1d04/5E45DC0B/t51.2885-19/s320x320/67145873_432528487357419_8463760023485415424_n.jpg?_nc_ht=scontent-ort2-2.cdninstagram.com"
+            <img mat-card-image src="https://visualz-1.s3.us-east-2.amazonaws.com/default-images/nickmccoord.jpg"
                 alt="Nick Quicktastic">
             <mat-card-actions>
                 <a href="https://www.stylinoutnetwork.com/quicktastic" target="_blank" mat-button>More Info</a>
