--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,8 +18,8 @@ gridster .gridster-row, gridster .gridster-column {
 }
 
 gridster {
-    background: #333;
-    box-shadow: inset 0px 0px 5px -1px #000000;
+    background: #333 !important;
+    box-shadow: inset 0px 0px 5px -1px #000000 !important;
 }
 
 .msg {
