live stream stuff

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -82,7 +82,9 @@
     <a routerLink="https://www.instagram.com/visualzapp/">Instagram</a>
     -->
     <br>
-    &copy; VISUALZ 1.2.2 Copyright 2019. All Rights Reserved.
+    &copy; VISUALZ Copyright 2019. All Rights Reserved.
+    <br>
+    Current v1.2.2
     <br>
     Created by <a href="https://karl.pb.studio" target="_blank">Karl</a>
 </footer>
