--- a/src/app/live-stream/live-stream.component.html
+++ b/src/app/live-stream/live-stream.component.html
@@ -1,4 +1,4 @@
-<div class="buttons">
+<div class="buttons" [hidden]="!host">
     <button mat-raised-button ripple color="primary" (click)="drawCanvas()">Refresh</button>
 
     <!-- <button mat-raised-button ripple color="primary" [matMenuTriggerFor]="menu2">
@@ -13,92 +13,227 @@
 
 </div>
 
+<a class="close-x" (click)="closeAllOverlays()"
+    *ngIf="searchGifs || searchImages || browseVideos || editingModuleSettings">
+    <mat-icon aria-label="close">close</mat-icon>
+</a>
+
+<!-- Set Settings Overlay -->
+<div class="settings-overlay"
+    *ngIf="editingTrackSettings || editingSetSettings || editingModuleSettings || generatingSet"
+    (click)="closeAllOverlays()">
+    &nbsp;.
+</div>
+
 <!-- Module Settings -->
-<!-- <div class="module-settings" *ngIf="editingModuleSettings">
-    <div *ngIf="track.modules[currentModule]">
-        <div class="preferences-title">
-            {{ track.modules[currentModule].name }}
-            <br>
-            Module {{ currentModule | number }}
-            <br>
-            {{ track.modules[currentModule].uuid }}
-        </div>
-        <div *ngFor="let key of objectKeys(tracks[currentTrack].modules[currentModule].settings)">
+<div class="settings-dialog" *ngIf="editingModuleSettings">
 
-            <div *ngIf="key == 'file'">
+    <div class="module-settings">
+        <div *ngIf="track.modules[editingModule]">
+            <div class="preferences-title">
+                {{ track.modules[editingModule].name }}
+                <br>
+                Module {{ editingModule | number }}
+                <br>
+                {{ track.modules[editingModule].uuid }}
+            </div>
+            <div *ngFor="let key of objectKeys(track.modules[editingModule].settings)">
 
-                <div class="filepath" *ngIf="tracks[currentTrack].modules[currentModule].settings[key] != ''"
-                    title="{{ tracks[currentTrack].modules[currentModule].settings[key] }}">
-                    File Path: {{tracks[currentTrack].modules[currentModule].settings[key] | truncate : 20 }}
+                <!-- <div *ngIf="key == 'file'">
+
+                    <div class="filepath" *ngIf="track.modules[currentModule].settings[key] != ''"
+                        title="{{ track.modules[currentModule].settings[key] }}">
+                        File Path: {{track.modules[currentModule].settings[key] | truncate : 20 }}
+                    </div>
+
+                    <img *ngIf="track.modules[currentModule].settings[key] && track.modules[currentModule].name == 'Image'"
+                        src="{{track.modules[currentModule].settings[key]}}" class="setting-image" />
+
+                    <button mat-raised-button (click)="uploadervideo.click()">Browse Files</button>
+
+                    <input type="file" [hidden]="true" #uploadervideo (change)="uploadVideoFile($event, key)" />
+
+                    <button *ngIf="tracks[currentTrack].modules[currentModule].settings[key] !== ''" mat-raised-button
+                        (click)="removeFile($event,key)" class="settings-button">Remove File</button>
                 </div>
 
-                <img *ngIf="tracks[currentTrack].modules[currentModule].settings[key] && tracks[currentTrack].modules[currentModule].name == 'Image'"
-                    src="{{tracks[currentTrack].modules[currentModule].settings[key]}}" class="setting-image" />
+                <div *ngIf="key == 'rotation' || key == 'textSize'">
+                    <label *ngIf="key == 'textSize'">Text Size</label>
+                    <label *ngIf="key == 'rotation'">Degrees</label>
+                    <input type="number" [value]="tracks[currentTrack].modules[currentModule].settings[key]"
+                        (change)="changeRotation($event, key)" />
+                </div>
 
-                <button mat-raised-button (click)="uploadervideo.click()">Browse Files</button>
+                <div *ngIf="key == 'text'" class="preferences-item">
+                    <label>{{ key | titlecase }}</label>
+                    <input type="text" [value]="tracks[currentTrack].modules[currentModule].settings[key]"
+                        (change)="changeText($event, key)" />
+                </div> -->
 
-                <input type="file" [hidden]="true" #uploadervideo (change)="uploadVideoFile($event, key)" />
+                <div class="preferences-item" *ngIf="key == 'searchGifs'">
+                    <button mat-raised-button (click)="toggleSearchGifs()">
+                        Search Gifs
+                    </button>
+                </div>
 
-                <button *ngIf="tracks[currentTrack].modules[currentModule].settings[key] !== ''" mat-raised-button
-                    (click)="removeFile($event,key)" class="settings-button">Remove File</button>
+                <!-- <div class="preferences-item" *ngIf="key == 'searchImages'">
+                    <button mat-raised-button (click)="toggleSearchImages()" *ngIf="key == 'searchImages'">
+                        Search Images
+                    </button>
+                </div>
+
+                <div class="preferences-item" *ngIf="key == 'browseVideos'">
+                    <button mat-raised-button (click)="toggleBrowseVideos()" *ngIf="key == 'browseVideos'">
+                        Browse Video Library
+                    </button>
+                </div> -->
+
+                <!-- <div *ngIf="key == 'number'">
+                    <label>Number</label>
+                    <input type="text" disabled="disabled"
+                        [value]="tracks[currentTrack].modules[currentModule].settings[key]" />
+                </div> -->
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="gif-image-search" (click)="closeAllOverlays($event)" *ngIf="searchGifs || searchImages || browseVideos">
+
+    <div class="search-bar" (click)="$event.stopPropagation()" *ngIf="searchGifs || searchImages">
+        <form>
+            <input type="text" value="search" [(ngModel)]="searchTag" name="searchTag" />
+            <button mat-raised-button ripple class="search" (click)="search()" color="primary">Search</button>
+        </form>
+    </div>
+
+    <div class="browse-bar" *ngIf="browseVideos" (click)="$event.stopPropagation()">
+
+        <div class='top'>
+
+            <div class='feature-video'>
+                <video width="" height="290" class="playing-video" muted loop controls>
+                    <!-- <source src="https://visualz-1.s3.us-east-2.amazonaws.com/" type="video/mp4"> -->
+                </video>
             </div>
 
-            <div *ngIf="key == 'rotation' || key == 'textSize'">
-                <label *ngIf="key == 'textSize'">Text Size</label>
-                <label *ngIf="key == 'rotation'">Degrees</label>
-                <input type="number" [value]="tracks[currentTrack].modules[currentModule].settings[key]"
-                    (change)="changeRotation($event, key)" />
+            <div class="author"
+                [ngStyle]="{'background-image': 'url(' + videoLibrary[currentBrowseArtist].imageUrl + ')'}">
+                <div class="detail">
+                    <span class="name">
+                        {{ videoLibrary[currentBrowseArtist].name | titlecase }} |
+                        {{ videoLibrary[currentBrowseArtist].collections.length }} Collection(s) |
+                        {{ countVideos() }} Video(s)
+                    </span>
+                    <a (click)="openUrl(videoLibrary[currentBrowseArtist].link)">
+                        More from {{ videoLibrary[currentBrowseArtist].name | titlecase }}
+                    </a>
+                </div>
             </div>
 
-            <div *ngIf="key == 'text'" class="preferences-item">
-                <label>{{ key | titlecase }}</label>
-                <input type="text" [value]="tracks[currentTrack].modules[currentModule].settings[key]"
-                    (change)="changeText($event, key)" />
-            </div>
+            <div class='fda'>
+                <img class='cc' src='../assets/cc.webp' />
+                <div class='cc-description'>
+                    All videos are released by their respective authors under the Creative Commons license and are
+                    available
+                    for both commercial and
+                    non-commercial work in ANY form. All audio rights are retained by
+                    their respective owners.
+                </div>
 
-            <div class="preferences-item" *ngIf="key == 'searchGifs'">
-                <button mat-raised-button (click)="toggleSearchGifs()">
-                    Search Gifs
+                <!-- Artist Browse Dropdown-->
+                <button mat-raised-button ripple color="primary" [matMenuTriggerFor]="menu2">
+                    Artist: <strong>{{ videoLibrary[currentBrowseArtist].name | titlecase }}</strong>
                 </button>
-            </div>
+                <mat-menu #menu2="matMenu">
+                    <button mat-menu-item (click)="currentBrowseArtist = i"
+                        *ngFor="let artist of videoLibrary; let i = index">
+                        {{ artist.name | titlecase }}
+                    </button>
+                </mat-menu>
 
-            <div class="preferences-item" *ngIf="key == 'searchImages'">
-                <button mat-raised-button (click)="toggleSearchImages()" *ngIf="key == 'searchImages'">
-                    Search Images
+                <!-- Collection Browse Dropdown -->
+                <button mat-raised-button ripple class="" color="primary" [matMenuTriggerFor]="menu3">
+                    Collection:
+                    <strong>{{ videoLibrary[currentBrowseArtist].collections[currentBrowseArtistCollection].name | titlecase }}</strong>
                 </button>
+                <mat-menu #menu3="matMenu">
+                    <button mat-menu-item (click)="currentBrowseArtistCollection = i"
+                        *ngFor="let collection of videoLibrary[currentBrowseArtist].collections; let i = index">
+                        {{ collection.name | titlecase }}
+                    </button>
+                </mat-menu>
             </div>
 
-            <div class="preferences-item" *ngIf="key == 'browseVideos'">
-                <button mat-raised-button (click)="toggleBrowseVideos()" *ngIf="key == 'browseVideos'">
-                    Browse Video Library
-                </button>
-            </div>
-
-            <div *ngIf="key == 'number'">
-                <label>Number</label>
-                <input type="text" disabled="disabled"
-                    [value]="tracks[currentTrack].modules[currentModule].settings[key]" />
-            </div>
+            <div class='clearfix'></div>
 
         </div>
     </div>
-</div> -->
+
+    <!-- Results -->
+    <div class="search-results" (click)="$event.stopPropagation()">
+
+        <!-- Gif Search w/ Giphy -->
+        <div *ngIf="searchGifs">
+            <div *ngFor="let g of gifResults; let i = index" (click)="swapGif(i)" class="result">
+                <img src="{{g.gif}}" />
+            </div>
+        </div>
+
+        <!-- Image Search w/ Unsplash
+        <div *ngIf="searchImages">
+            <div *ngFor="let g of imageResults; let i = index" (click)="swapImage(i)" class="result">
+                <img src="{{g.still}}" />
+                <div class="author">
+                    By <a (click)="openUrl(g.profile)">{{g.username}}</a>
+                    from <a (click)="openUrl(g.html)">Pexels</a>
+                </div>
+            </div>
+        </div>-->
+
+        <!-- Video Library
+        <div *ngIf="browseVideos">
+            <div [hidden]="g.mp4 == ''"
+                *ngFor="let g of videoLibrary[currentBrowseArtist].collections[currentBrowseArtistCollection].videos; let i = index"
+                class="result">
+                <video width="320" height="180" class="playing-video" muted loop controls>
+                    <source src="https://visualz-1.s3.us-east-2.amazonaws.com/{{g.Key}}" type="video/mp4">
+                </video>
+                <div class="author">
+                    <a (click)="swapVideo(i)">Add To Scene</a>
+                </div>
+            </div>
+        </div>-->
+
+    </div>
+
+    <!-- <div class="browse-results" (click)="$event.stopPropagation()">
+
+        <div class="result">
+            
+        </div>
+
+    </div> -->
+
+</div>
 
 <!-- Line in waveform -->
-<div id="waveform" #waveform></div>
+<div id="waveform" #waveform [hidden]="!host"></div>
 
 <!-- Loading Overlay, overlays preview window only -->
-<div class="loading-sketch" [hidden]="!sketchLoading"></div>
+<!-- <div class="loading-sketch" [hidden]="!sketchLoading"></div> -->
 
 <!-- Three preview area -->
 <div id="renderContainer" class="renderer-container" #rendererContainer>
     <canvas #rendererCanvas id="renderCanvas" crossorigin="anonymous"></canvas>
 </div>
 
-<video class="webcam-video" id="webcamVideo" controls autoplay muted></video>
+<video class="webcam-video" id="webcamVideo" controls autoplay muted [hidden]="hostVideoHidden"></video>
+<video class="guest-video" controls [hidden]="guestVideoHidden"></video>
 
 <!-- Holder for three js, contains video elements for videoTexture, canvas for Text  -->
-<div *ngFor="let module of track.modules; let i = index" [hidden]="currentModule != i" class="raw-video">
+<div *ngFor="let module of track.modules; let i = index" [hidden]="currentModule != i || !host" class="raw-video">
 
     <!-- Video -->
     <video id="video-{{module.uuid}}" crossOrigin="anonymous"
@@ -113,27 +248,18 @@
     </div>
 </div>
 
-<mat-toolbar class="pink">
+<mat-toolbar class="pink" [hidden]="!host">
     <mat-toolbar-row class="main" id="main-toolbar">
 
         <button title="Add Media" matRipple mat-mini-fab (click)="addModule(0)">
             <mat-icon aria-label="Add Media">library_add</mat-icon>
         </button>
 
-        <!-- Play/Pause -->
-        <button title="Make Video React to Audio" matRipple mat-mini-fab *ngIf="!playing" (click)="play()">
-            <mat-icon aria-label="Make Video React to Audio">hearing</mat-icon>
-        </button>
-
-        <button title="Stop Audio Reactivity" matRipple mat-mini-fab *ngIf="playing" (click)="stop()">
-            <mat-icon aria-label="Stop Audio Reactivity">not_interested</mat-icon>
-        </button>
-
     </mat-toolbar-row>
 </mat-toolbar>
 
 <!-- Main/Basic Modules -->
-<div class="mod-wrapper">
+<div class="mod-wrapper" [hidden]="hostVideoHidden">
     <div class="modules">
         <gridster [options]="modOptions">
             <gridster-item [item]="module" (mousedown)="editModule($event, i)"
@@ -145,7 +271,7 @@
                     <button mat-mini-fab (mousedown)="removeModule($event, i)">
                         <mat-icon>delete</mat-icon>
                     </button>
-                    <button mat-mini-fab (mousedown)="toggleModuleSettings()">
+                    <button mat-mini-fab (mousedown)="toggleModuleSettings($event, i)">
                         <mat-icon>settings_applications</mat-icon>
                     </button>
                     <span *ngIf="true == false">{{i + 1}}</span>
