--- a/src/app/live-stream/live-stream.component.scss
+++ b/src/app/live-stream/live-stream.component.scss
@@ -24,6 +24,7 @@
     //float: right;
     position: fixed;
     right: 0px;
+    top: 0px;
     z-index: 2;
     background-color: #111;
     //cursor: pointer;
@@ -79,7 +80,28 @@ gridster .gridster-row, gridster .gridster-column {
 gridster {
     background: #333 !important;
     box-shadow: inset 0px 0px 5px -1px #000000 !important;
+
+
+    gridster-item {
+        opacity: 0.5;
+
+        &:hover {
+            opacity: 0.8;
+        }
+
+        &.selected {
+            opacity: 1;
+            outline: 1px solid #81d866;
+        }
+
+        &.editing {
+            opacity: 1;
+            outline: 1px solid rgb(236, 255, 129);
+        }
+    }
 }
+
+
 
 mat-button-toggle, gridster-item {
     &:hover {
@@ -116,4 +138,251 @@ mat-button-toggle, gridster-item {
 
 .pink {
     opacity: 0.85;
+}
+
+
+.close-x {
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    z-index: 1000000;
+    margin: 5px 5px 0 0;
+    cursor: pointer;
+
+    color: #333;
+
+    &.white {
+        color: #fff;
+    }
+}
+
+
+.settings-overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: #333;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    opacity: 0.8;
+}
+
+.settings-dialog {
+    width: 33%;
+    //max-width: 300px;
+    display: block;
+    position: absolute;
+    z-index: 3;
+    background-color: #333;
+    top: 25%;
+    left: 33%;
+    max-height: 70%;
+    padding: 40px;
+    color: #fff;
+    border-radius: 4px;
+    box-shadow: 0px 2px 4px #111;
+    font-family: arial;
+    font-size: 13px;
+}
+
+
+.gif-image-search {
+    width: 100vw;
+    height: 100vh;
+    overflow-y: auto;
+    margin: 0px;
+    background: rgba(0,0,0,0.6);
+    position: fixed;
+    z-index: 1000;
+    top: 0px;
+    left: 0px;
+
+    .browse-bar {
+
+        position: relative;
+
+        .top {
+
+            margin: 0px;
+            padding: 40px 40px 0;
+
+            .feature-video {
+
+                display: none;
+                margin: 0px;
+
+                video {
+                    margin: 0px auto;
+                    width: auto;
+                }
+            }
+
+            .author {
+
+                width: calc(40%);
+                background: #ccc;
+                float: left;
+                height: 300px;
+                border-radius: 0px;
+                position: relative;
+                background-position: center;
+                background-size: cover;
+                display: block;
+                margin: 0px;
+
+                .detail {
+
+                    background: rgba(0,0,0,0.6);
+                    color: #fff;
+                    position: absolute;
+                    bottom: 0px;
+                    left: 0px;
+                    font-family: arial;
+                    font-size: 12px;
+                    padding: 10px 20px;
+                    //border-radius: 0 7px 0 0;
+                    line-height: 17px;
+                    width: 100%;
+                    
+                    text-align: center;
+
+                    span {
+                        display: block;
+                    }
+
+                    a {
+                        cursor: pointer;
+                        color: #ff4081;
+                    }
+                }
+            }
+
+            .fda {
+
+                float: left;
+                width: 60%;
+                display: block;
+                margin: 0px;
+                padding: 0 40px;
+
+                button {
+                    //height: 200px;
+                    z-index: 1002;
+                    font-size: 18px;
+                    margin-right: 20px;
+                    padding: 5px 20px;
+                    //width: calc(33vw - 53px);
+                }
+
+                .cc {
+                    width: 75%;
+                }
+
+                .cc-description {
+                    color: #fff;
+                    font-family: arial;
+                    margin: 20px 0;
+                    font-size: 14px;
+                    width: 75%;
+
+                }
+            }
+        }
+    }
+    
+    .search-bar {
+        
+        position: relative;
+        top: 40px;
+        left: 40px;
+        width: calc(100vw - 160px);
+        margin-bottom: 60px;
+
+        input {
+            background: #333;
+            border: none;
+            color: #fff;
+            width: calc(100vw - 160px);
+            height: 120px;
+            //margin: 40px;
+            font-size: 140px;
+            padding: 40px;
+            outline: none;
+            border-radius: 4px;
+        }
+    
+        button {
+            height: 200px;
+            top: 0px;
+            right: 0px;
+            position: absolute;
+            z-index: 1002;
+            font-size: 20px;
+        }
+    }
+
+    .search-results {
+
+        
+        //margin: 0 20px 40px;
+        position: relative;
+        //top: 240px;
+        left: 40px;
+        width: calc(100vw - 80px);
+
+        .result {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: calc(33vw - 25px);
+            float: left;
+            border-radius: 4px;
+            overflow: hidden;
+            margin: 20px 0 0;
+            height: 200px;
+            text-align: center;
+            cursor: pointer;
+            position: relative;
+
+            img {
+                //left: 50%;
+                //margin-left: -200px;
+                //position:absolute;
+            }
+
+            .author {
+                background: rgba(0,0,0,0.6);
+                color: #ffffff;
+                width: calc(100% - 28px);
+                text-align: left;
+                font-size: 12px;
+                bottom: 0px;
+                padding: 10px;
+                font-family: arial;
+                position: absolute;
+
+                a {
+                    color: #ff4081;
+                    text-decoration: underline;
+                }
+            }
+        }
+    }
+
+
+    // img {
+    //     float: left;
+    //     width: 80px;
+    //     height: 45px;
+    //     display: block;
+    //     margin-top: 10px;
+    //     margin-right: 10px;
+    //     border: 1px solid transparent;
+    //     cursor: pointer;
+
+    //     &:hover {
+    //         border: 1px solid #fff;
+    //     }
+    // }
 }
