--- a/src/app/stream-start/stream-start.component.html
+++ b/src/app/stream-start/stream-start.component.html
@@ -1,32 +1,15 @@
-<div class="content-wrapper normal">
-    <div class="content-inner-wrapper">
+<div class="content-wrapper normal djgif">
+    <div class="content-inner-wrapper center dark">
 
-        <form>
-            <h1 class="center">Start or Join a Live Stream</h1>
+        <h1 class="center bigs">Start a Live Stream</h1>
 
-            <div class="center">
-                <mat-form-field class="example-full-width">
-                    <mat-label>Nickame or Code</mat-label>
-                    <input matInput placeholder="Ex. sam-white-set" ([ngModel])="code" value="">
-                </mat-form-field>
-            </div>
+        <p>Are you tired of the same ol' boring live stream? This is better. Thanks for using our thing.</p>
+        <br>
 
-            <div class="clearfix"></div>
+        <a (click)="start()" mat-raised-button class="pink button bigtext">
+            Start
+        </a>
 
-            <div class="bordered one">
-                <a (click)="start()" mat-raised-button class="pink button">
-                    Start
-                </a>
-            </div>
-
-            <div class="bordered two">
-                <a (click)="join()" mat-raised-button class="pink button">
-                    Join
-                </a>
-            </div>
-        </form>
-
-        <br><br><br><br><br><br>
 
     </div>
 </div>
