--- a/src/app/live-stream/live-stream.component.scss
+++ b/src/app/live-stream/live-stream.component.scss
@@ -158,7 +158,7 @@ mat-button-toggle, gridster-item {
     margin: 5px 5px 0 0;
     cursor: pointer;
 
-    color: #333;
+    color: #ff4081;
 
     &.white {
         color: #fff;
@@ -170,8 +170,8 @@ mat-button-toggle, gridster-item {
     position: fixed;
     width: 100%;
     height: 100%;
-    background: #333;
-    z-index: 2;
+    background: #000;
+    z-index: 3;
     top: 0;
     left: 0;
     opacity: 0.8;
@@ -182,7 +182,7 @@ mat-button-toggle, gridster-item {
     //max-width: 300px;
     display: block;
     position: absolute;
-    z-index: 3;
+    z-index: 4;
     background-color: #333;
     top: 25%;
     left: 33%;
@@ -195,6 +195,38 @@ mat-button-toggle, gridster-item {
     font-size: 13px;
 }
 
+.info {
+    width: 50%;
+    //max-width: 300px;
+    display: block;
+    position: absolute;
+    z-index: 4;
+    background-color: #333;
+    top: 15%;
+    left: 25%;
+    max-height: 70%;
+    padding: 40px;
+    color: #fff;
+    border-radius: 4px;
+    box-shadow: 0px 2px 4px #111;
+    font-family: arial;
+    font-size: 13px;
+
+    h1 {
+        text-align: center;
+    }
+
+    h2 {
+        text-align: left;
+    }
+
+    input {
+        padding: 5px;
+        width: 50%;
+        margin: 0px auto;
+        display: block;
+    }
+}
 
 .gif-image-search {
     width: 100vw;
