--- a/src/app/live-stream/live-stream.component.html
+++ b/src/app/live-stream/live-stream.component.html
@@ -21,7 +21,7 @@
 </a>
 
 <!-- Set Settings Overlay -->
-<div class="settings-overlay" *ngIf="info || editingSetSettings || editingModuleSettings" (click)="closeAllOverlays()">
+<div class="settings-overlay" *ngIf="info || editingModuleSettings" (click)="closeAllOverlays()">
     &nbsp;.
 </div>
 
