--- a/src/app/live-stream/live-stream.component.html
+++ b/src/app/live-stream/live-stream.component.html
@@ -30,16 +30,13 @@
 
     <h2>Hosts:</h2>
     <ol>
-        <li>You are the host of this stage.</li>
         <li>Add visual scenes to your backdrop of your stage.</li>
         <li>The scenes will automatilly change with the audio from your mic/line-in.</li>
-        <li>Share the url address of this page with your viewers.</li>
     </ol>
 
     <h2>Guests:</h2>
     <ol>
-        <li>You are a guest of this stage.</li>
-        <li>Share the url address of this page with your friends.</li>
+        <li>Click play to start the stream.</li>
         <li>Have fun.</li>
     </ol>
 
