--- a/src/app/live-stream/live-stream.component.scss
+++ b/src/app/live-stream/live-stream.component.scss
@@ -204,7 +204,7 @@ mat-button-toggle, gridster-item {
     background-color: #333;
     top: 15%;
     left: 25%;
-    max-height: 70%;
+    //max-height: 70%;
     padding: 40px;
     color: #fff;
     border-radius: 4px;
@@ -214,10 +214,18 @@ mat-button-toggle, gridster-item {
 
     h1 {
         text-align: center;
+        font-size: 20px;
+        margin: 0px 0 5px 0;
     }
 
     h2 {
         text-align: left;
+        font-size: 14px;
+        margin: 0px;
+    }
+
+    p {
+        font-size: 11px;
     }
 
     input {
