--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,7 +33,7 @@
         <a routerLink="/support">SUPPORT</a>
         <a routerLink="/how-it-works">HOW IT WORKS</a>
         -->
-        <button mat-button routerLink="/start">LIVE STREAM (NEW)</button>
+        <button mat-button routerLink="/start">QUARANSTREAM</button>
 
         <button mat-button [matMenuTriggerFor]="menu">HELP</button>
         <mat-menu #menu="matMenu">
