--- a/src/app/live-stream/live-stream.component.html
+++ b/src/app/live-stream/live-stream.component.html
@@ -26,7 +26,7 @@
 </div>
 
 <div class="info" *ngIf="info">
-    <h1>About Visualz Live Stream Stage v1.0.0</h1>
+    <h1>About Visualz Quaranstream v1.0.0</h1>
 
     <h2>Hosts:</h2>
     <ol>
