--- a/src/app/live-stream/live-stream.component.scss
+++ b/src/app/live-stream/live-stream.component.scss
@@ -9,6 +9,21 @@
         margin-top: 10px;
         margin-left: 10px;
     }
+
+    div {
+        float: left;
+        margin-left: 10px;
+        
+        button {
+            font-size: 11px;
+            
+        }
+    }
+
+    .nums {
+        color: #fff;
+        padding: 20px;
+    }
 }
 
 .raw-video {
