--- a/src/app/stream-start/stream-start.component.scss
+++ b/src/app/stream-start/stream-start.component.scss
@@ -11,6 +11,11 @@ $breakpoint-mobile: 768px;
     margin: 0px;
 }
 
+.nums {
+    color: #fff;
+    padding: 20px;
+}
+
 .bigtext {
     font-size: 30px;
     text-transform: uppercase;
